fix: Background icons, spacing h1

--- a/style.css
+++ b/style.css
@@ -64,6 +64,7 @@ section#page1 h1{
     font-size: 2.6rem;
     color: #161212;
     width: 21rem;
+    line-height: 47px;
 }
 
 section#page1 li{
@@ -77,7 +78,7 @@ section#page1 li{
 div#bloco1{
     display: flex;
     flex-direction: column;
-    gap: 0.9rem;
+    gap: 1rem;
 }
 
 button#img-button{
@@ -195,6 +196,7 @@ section#page3 h1{
     font-size: 2.9rem;
     color: #161212;
     width: 27rem;
+    line-height: 49px;
 }
 
 section#page3 li{
@@ -236,7 +238,7 @@ button#img-button2:hover{
 div#text-page3{
     display: flex;
     flex-direction: column;
-    gap: 1rem;
+    gap: 2rem;
 }
 
 section#page4{
@@ -251,7 +253,10 @@ section#page4 p{
     font-weight: 600;
     font-size: 1.2rem;
     padding-top: 0.3rem;
+    width: 8rem;
 }
+
+
 
 div#img4{
     display: flex;
@@ -261,3 +266,8 @@ div#img4{
     margin-bottom: auto;
 }
 
+.rb{
+    background-color: #ec949b;
+    padding: 0.4rem;
+    border-radius: 50%;
+}
